Bug 103803 - Bigger images are black on Intel GPU when OpenGL is enabled
Summary: Bigger images are black on Intel GPU when OpenGL is enabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.2.3.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.4
Keywords:
: 103614 (view as bug list)
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2016-11-09 09:43 UTC by Tomaz Vajngerl
Modified: 2016-11-14 16:42 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tomaz Vajngerl 2016-11-09 09:43:43 UTC
Description:
If a 4000x4000 or bigger image is inserted into Writer (for example) it is shown black. This happens with Intel Skylake GPU when OpenGL is enabled.

Steps to Reproduce:
1. Insert bigger 4000x4000 image to Writer

Actual Results:  
Black image

Expected Results:
Image show as it is


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Fedora; Linux x86_64; rv:49.0) Gecko/20100101 Firefox/49.0
Comment 2 Commit Notification 2016-11-11 11:10:11 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d05b11e5f590272b0036cf09cf8721c37db33791&h=libreoffice-5-2

tdf#103803 change from BGRA to RGBA color arrangement on Windows

It will be available in 5.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Aron Budea 2016-11-11 17:56:06 UTC
*** Bug 103614 has been marked as a duplicate of this bug. ***
Comment 4 Timur 2016-11-14 16:18:27 UTC
Bug 103833 sounds similar by title, is it related?
Comment 5 Tomaz Vajngerl 2016-11-14 16:42:23 UTC
(In reply to Timur from comment #4)
> Bug 103833 sounds similar by title, is it related?

You use an AMD GPU? Then no, doesn't sound like it is, but you can try out a daily build and you'll see.